--- a/futuresEsportCompetition/webCode.Rhtml
+++ b/futuresEsportCompetition/webCode.Rhtml
@@ -36,22 +36,24 @@
             <div class="main-slider slider">
                <ul class="slides">
                   <li>
-                     <div class="background-img">
-                        <img src="img/29.jpg" alt="">
+                     <div class="background-imsg">
+                        <img src="img/29.jpg" alt="" height=100% margin= 0 >
                      </div>
                   </li>
                </ul>
             </div>
+            
+            
             <!--End main slider-->
             <!--Header-->
             <header class="header">
                <!--Container-->
-               <div class="container ">
+               <div class="container  ">
                   <!--Row-->
-                  <div class="row">
+                  <div class="row" >
                      <div class="col-md-2">
                         <a class="scroll logo" href="#wrapper">
-                             <img align="left" src="img/FWC.png" width="100" height="100" />
+                           <h2>FWC</h2>
                         </a>
                      </div>
                      <div class="col-md-10 text-right">
@@ -60,17 +62,18 @@
                               <a href="#" class="mobile-but" >
                                  <div class="lines"></div>
                               </a>
+                              
                            </div>
                            <ul>
-                              <li><a class="scroll" href="#wrapper"><strong>Home</strong></a></li>
-                              <li><a class="scroll" href="#about"><strong>About</strong></a></li>
-                              <li><a class="scroll" href="#Story"><strong>Story</strong></a></li>
-                              <li><a class="scroll" href="#register"><strong>Register</strong></a></li>
-                              <li><a class="scroll" href="#Partners"><strong>Partners</strong></a></li>
-                              <li><a class="scroll" href="#tickets"><strong>Tickets</strong></a></li>
-                              <li><a class="scroll" href="#location"><strong>Location</strong></a></li>
-                              <li><a class="scroll" href="#faq"><strong>FAQ</strong></a></li>
-                              <li><a class="scroll" href="#gallery"><strong>Gallery</strong></a></li>
+                              <li><a class="scroll" href="#wrapper">Home</a></li>
+                              <li><a class="scroll" href="#about">About</a></li>
+                              <li><a class="scroll" href="#Story">Story</a></li>
+                              <li><a class="scroll" href="#Partners">Partners</a></li>
+                              <li><a class="scroll" href="#register">Register</a></li>
+                              <li><a class="scroll" href="#tickets">Tickets</a></li>
+                              <li><a class="scroll" href="#location">Location</a></li>
+                              <li><a class="scroll" href="#faq">FAQ</a></li>
+                              <li><a class="scroll" href="#about Us">About Us</a></li>
                            </ul>
                         </nav>
                      </div>
@@ -89,8 +92,8 @@
                      <div class="col-sm-12 text-center">
       
                         <h1 class="large mb-10">Futures World Championship</h1>
-                        <p class="uppercase "> Braving The Word Challenges</p>
-
+                       <p class="uppercase "> Braving The Word Challenges</p>
+                        <p class="uppercase "> April 2nd 2022 with over 100 teams all over the world - Montreal, Quebec </p>
                         <a href="#register" class="but scroll "> Join Us </a>
                      </div>
                   </div>
@@ -108,8 +111,8 @@
                <!--Row-->
                <div class="row">
                   <div class="col-sm-8 col-sm-offset-2 mb-100 text-center">
-                     <h1 class="title">Futures World Championship</h1>
-
+                     <h1 class="title">Futures World Champion</h1>
+                     <p class="title-lead mt-20">Welcome to our brand new websit :) </p>
                   </div>
                </div>
                <!--End row-->
@@ -279,7 +282,7 @@
          </section>
          <!--End speakers section-->
            <!--Counter section-->
-         <section class="counter pt-120 pb-120 overlay parallax">
+<section class="counter pt-120 pb-120 overlay parallax">
             <div class="background-img" >
             </div>
             <!--Container-->
@@ -287,7 +290,7 @@
                <!--Row-->
                <div class="row">
                   <div class="col-sm-12  text-center  front-p">
-                     <h1 class="title">Time left until the conference start </h1>
+                     <h1 class="title">Time left until the Competition start </h1>
                      <p class="title-lead mt-10 mb-20">April 2nd 2022 with over 100 Teams Around the World - Montreal, Canada </p>
                      <h1 id="demo" class="countdown gradient-text" style="text-transform:lowercase"></h1>
                      <script>
@@ -357,9 +360,8 @@
                            <div class="block-select">
                               <select required>
                                  <option value="">Choose Ticket</option>
-                                 <option value="120">One Day Ticket</option>
-                                 <option value="590">All Days Ticket</option>
-                              </select>
+                                 <option value="50">One Day Ticket</option>
+                                 <option value="590">All Days Ticket</option>   </select>
                            </div>
                         </div>
                         <div class="col-sm-12">
@@ -701,7 +703,7 @@
          </section>
          <!--End faq section-->
          <!--Faq section-->
-         <section id="gallery" class="gallery pt-120">
+         <section id="about Us" class="gallery pt-120">
             <!--Container-->
             <div class="container">
                <!--Row-->
@@ -734,8 +736,8 @@
                         <path fill="url(#SVGID_15_)" d="M21,10c-4.963,0-9,4.038-9,9s4.037,9,9,9s9-4.038,9-9S25.963,10,21,10z M21,27c-4.411,0-8-3.589-8-8
                            s3.589-8,8-8s8,3.589,8,8S25.411,27,21,27z"/>
                      </svg>
-                     <h1 class="title mt-10"> Memories From The Events  </h1>
-                     <p class="title-lead mt-5">For more photo and video visit our socials hubs.</p>
+                     <h1 class="title mt-10"> About Us  </h1>
+                     <p class="title-lead mt-5">Our Individual and Organizations member</p>
                   </div>
                </div>
                <!--End row-->
