--- a/futuresEsportCompetition/webCode.Rhtml
+++ b/futuresEsportCompetition/webCode.Rhtml
@@ -69,8 +69,7 @@
                               <li><a class="scroll" href="#Partners"><strong>Partners</strong></a></li>
                               <li><a class="scroll" href="#tickets"><strong>Tickets</strong></a></li>
                               <li><a class="scroll" href="#location"><strong>Location</strong></a></li>
-                              <li><a class="scroll" href="#faq"><strong>FAQ</strong></a></li>
-                              <li><a class="scroll" href="#gallery"><strong>Gallery</strong></a></li>
+                              <li><a class="scroll" href="#faq"><strong>FAQ</strong></
                            </ul>
                         </nav>
                      </div>
