--- a/futuresEsportCompetition/webCode.Rhtml
+++ b/futuresEsportCompetition/webCode.Rhtml
@@ -74,7 +74,7 @@
                            </ul>
                         </nav>
                      </div>
-                  </div>
+                  </div> asdasdlk
                   <!--End row-->
                </div>
                <!--End container-->
